# communicator

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  oi_communicator.pc.in
src/: Makefile.am  Makefile.in  channel.hpp  channel_base.cpp  channel_base.hpp  channel_stat.cpp  channel_stat.hpp  cm_stat.cpp  cm_stat.hpp  com_type.hpp  comm_stubs.cpp  comm_stubs.hpp  communicator.cpp  communicator.hpp  service_stubs.cpp  service_stubs.hpp  zmq_msg_util.cpp  zmq_msg_util.hpp
test/: Makefile.am  Makefile.in  child.cpp  child.hpp  client.cpp  container.cpp  container.hpp  parent.cpp  parent.hpp  run_client_server.sh  server.cpp
